# agent-wellness-protocol

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_SURFACE.md  ARCHITECTURE.md  CONTRIBUTING.md  CORE_PACK_V0.md  FOUNDATION.md  IMPLEMENTATION_NOTES.md  MVP_USER_JOURNEYS.md  OPENCLAW_TESTING.md  PACKS.md  PERSONALIZATION.md  PILLARS.md  PILLAR_QUEST_PACKS_PROGRAM_v0.1.md  PRESETS.md  PROFILE_SCHEMA.md  QUEST_LIBRARY.md  QUEST_LINT_RULES.md  QUEST_SCHEMA.md  REPO_STRUCTURE.md  RESEARCH_INDEX.md  RESEARCH_SYNTHESIS.md  SCOPE_LOCK.md  SCORING.md  SECURITY.md  SETUP.md  SETUP_MAC.md  SETUP_WINDOWS.md  TELEMETRY.md  THREAT_MODEL.md
docs/field_notes/: 2026-02-12-moltfred-proof-ux.md
examples/mcp/: README.md
examples/openclaw/: README.md
mcp-server/: README.md
mcp-server/src/clawspa_mcp/: __init__.py  server.py
mcp-server/tests/: test_mcp_server.py
presets/: README.md
presets/schema/: preset.schema.json
presets/v0/: admin_ops.v0.preset.yaml  builder.v0.preset.yaml  researcher.v0.preset.yaml  security_steward.v0.preset.yaml  task_manager.v0.preset.yaml
quests/packs/wellness.continuous_governance_oversight.v0/: pack.yaml
quests/packs/wellness.core.v0/: pack.yaml
research/: deep-research-report.md
runner/: README.md
runner/tests/: test_api.py  test_cli.py  test_presets.py  test_runner.py  test_telemetry.py
scripts/: check_bidi.py  mcp_smoke.py  release.sh  update_pack_checksums.py  verify.sh
scripts/tests/: test_check_bidi.py  test_update_pack_checksums.py
web/: README.md
(+136 files in other folders)
